# platform

./: Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  production-readiness.yaml
agents/: evaluation-agent.md
architecture/: alfred-anchor-model.md  define-build-loop.md  digital-twin-platform-architecture.md  edge-exit-model.md  guardian-alliance-model.md  guardian-gadgets-model.md  guardian-support-roles.md  movie-buffer.md
digital-twin/: README.md  evaluation-model-agent.twin.json
docs/: CONFORMANCE.md  governance.md  operations.md  production-readiness.md  release-gate.md  security.md
examples/: software-tool.example.json
governance/: agent-character-ip-policy.md  agent-ip-compliance-policy.md  ip-and-cultural-reference-policy.md
maturity/: saas-adoption-intelligence-index.md  saas-governance-score.md  saas-trust-score.md  saas-usage-score-model.md
schemas/: edge-exit.schema.json  ip-compliance-check.schema.json  recommendation.schema.json  saas-usage-score.schema.json  software-category.schema.json  software-tool.schema.json  software.schema.json  totem-anchor.schema.json  use-case.schema.json
scripts/: validate-json.js
src/: index.ts  intelligence.ts  lib.rs
surreal/: governance.surql  platform.surql
